language/move-lang/tests/move_check/parser/invalid_character_comment.move
address 0x0:

// Non-ASCII characters in comments (e.g., ф) are also not allowed.
module Temp {
}
